@@ -1,16 +1,7 @@
 /etc/cryptsetup-initramfs
-/etc/default
-/etc/init.d
-/lib/cryptsetup/checks
-/lib/cryptsetup/scripts
-/sbin
-/usr/share/bash-completion/completions
-/usr/share/bug
 /usr/share/cryptsetup/initramfs/bin
 /usr/share/initramfs-tools/conf-hooks.d
 /usr/share/initramfs-tools/hooks
 /usr/share/initramfs-tools/scripts/local-block
 /usr/share/initramfs-tools/scripts/local-bottom
 /usr/share/initramfs-tools/scripts/local-top
-/usr/share/man/man5
-/usr/share/man/man8
