@@ -1,0 +1,13 @@
+#! /bin/sh
+
+set -e
+
+case "$1" in
+    remove)
+	if which update-initramfs >/dev/null; then
+		update-initramfs -u
+	fi
+    ;;
+esac
+
+#DEBHELPER#
