@@ -1,7 +1,6 @@
 AUTHORS
 FAQ
 debian/README.gnupg
-debian/README.initramfs
 debian/README.keyctl
 debian/README.openct
 debian/README.opensc
