@@ -1,0 +1,5 @@
+cryptsetup-run: init.d-script-possible-missing-stop etc/init.d/cryptdisks 1
+cryptsetup-run: init.d-script-possible-missing-stop etc/init.d/cryptdisks-early 1
+cryptsetup-run: init.d-script-does-not-implement-optional-option etc/init.d/cryptdisks status
+cryptsetup-run: init.d-script-does-not-implement-optional-option etc/init.d/cryptdisks-early status
+cryptsetup-run: no-debconf-config
