@@ -1,7 +1,0 @@
-cryptsetup: init.d-script-possible-missing-stop etc/init.d/cryptdisks 1
-cryptsetup: init.d-script-possible-missing-stop etc/init.d/cryptdisks-early 1
-cryptsetup: init.d-script-does-not-implement-optional-option etc/init.d/cryptdisks status
-cryptsetup: init.d-script-does-not-implement-optional-option etc/init.d/cryptdisks-early status
-cryptsetup: no-debconf-config
-# `cryptroot-unlock` is meant to be run from the initramfs image, using busybox's /bin/ash
-unusual-interpreter usr/share/cryptsetup/initramfs/bin/cryptroot-unlock #!/bin/busybox
