@@ -1,57 +1,17 @@
-#! /bin/sh
+#!/bin/sh
 
 set -e
 
-create_crypttab() {
-	if [ ! -f "/etc/crypttab" ]; then
-		cat <<-EOC >/etc/crypttab
-		# <target name>	<source device>		<key file>	<options>
-		EOC
-	fi
-}
+CONFFILE=/etc/cryptsetup-initramfs/conf-hook
 
-# Remove a no-longer used conffile
-rm_conffile() {
-	PKGNAME="$1"
-	CONFFILE="$2"
-	if [ -e "$CONFFILE" ]; then
-		md5sum="`md5sum \"$CONFFILE\" | sed -e \"s/ .*//\"`"
-		old_md5sum="`dpkg-query -W -f='${Conffiles}' $PKGNAME | sed -n -e \"\\\\' $CONFFILE '{s/ obsolete$//;s/.* //p}\"`"
-		if [ "$md5sum" != "$old_md5sum" ]; then
-			echo "Obsolete conffile $CONFFILE has been modified by you."
-			echo "Saving as $CONFFILE.dpkg-bak ..."
-			mv -f "$CONFFILE" "$CONFFILE".dpkg-bak
-		else
-			echo "Removing obsolete conffile $CONFFILE ..."
-			rm -f "$CONFFILE"
-		fi
-	fi
-}
-
-VERSION_UDEV="2:1.0.6-5"
-case "$1" in
-	install)
-		create_crypttab
-		if dpkg --compare-versions "$2" le "$VERSION_UDEV"; then
-			rm_conffile cryptsetup "/etc/udev/rules.d/z60_cryptsetup.rules"
-		fi
-	;;
-
-	upgrade)
-		if dpkg --compare-versions "$2" le "$VERSION_UDEV"; then
-			rm_conffile cryptsetup "/etc/udev/rules.d/z60_cryptsetup.rules"
-		fi
-	;;
-
-	abort-upgrade)
-	;;
-
-	*)
-		echo "preinst called with unknown argument '$1'" >&2
-		exit 1
-	;;
-esac
+if [ "$1" = "install" -o "$1" = "upgrade" ] && [ -n "$2" ] &&
+    dpkg --compare-versions -- "$2" le-nl '2:2.0.2-2~'; then
+    md5sum="$(md5sum "$CONFFILE" | sed -e 's/ .*//')"
+    old_md5sum="$(dpkg-query -W -f='${Conffiles}' cryptsetup | \
+        sed -n -e "\'^ $CONFFILE ' { s/ obsolete$//; s/.* //; p }")"
+    if [ "$md5sum" = "$old_md5sum" ]; then
+        rm -f "$CONFFILE"
+    fi
+fi
 
 #DEBHELPER#
-
-exit 0
