@@ -120,50 +120,50 @@ install-stamp: build-stamp
 	rm -rf $(CURDIR)/debian/cryptsetup-bin/lib
 	rm -rf $(CURDIR)/debian/cryptsetup-bin/usr/include
 
-	install -m 0644 debian/cryptdisks.functions $(CURDIR)/debian/cryptsetup/lib/cryptsetup/
-	install -m 0755 debian/checks/* $(CURDIR)/debian/cryptsetup/lib/cryptsetup/checks/
+	install -m 0644 debian/cryptdisks.functions $(CURDIR)/debian/cryptsetup-run/lib/cryptsetup/
+	install -m 0755 debian/checks/* $(CURDIR)/debian/cryptsetup-run/lib/cryptsetup/checks/
 	install -m 0755 debian/scripts/luksformat $(CURDIR)/debian/cryptsetup-bin/usr/sbin/
-	install -m 0755 debian/scripts/cryptdisks_start $(CURDIR)/debian/cryptsetup/sbin/
-	install -m 0755 debian/scripts/cryptdisks_stop $(CURDIR)/debian/cryptsetup/sbin/
-	install -m 0755 debian/scripts/decrypt_* $(CURDIR)/debian/cryptsetup/lib/cryptsetup/scripts/
-	install -m 0755 debian/scripts/passdev $(CURDIR)/debian/cryptsetup/lib/cryptsetup/scripts/
-	install -m 0755 debian/askpass $(CURDIR)/debian/cryptsetup/lib/cryptsetup/
+	install -m 0755 debian/scripts/cryptdisks_start $(CURDIR)/debian/cryptsetup-run/sbin/
+	install -m 0755 debian/scripts/cryptdisks_stop $(CURDIR)/debian/cryptsetup-run/sbin/
+	install -m 0755 debian/scripts/decrypt_* $(CURDIR)/debian/cryptsetup-run/lib/cryptsetup/scripts/
+	install -m 0755 debian/scripts/passdev $(CURDIR)/debian/cryptsetup-run/lib/cryptsetup/scripts/
+	install -m 0755 debian/askpass $(CURDIR)/debian/cryptsetup-run/lib/cryptsetup/
 	install -m 0755 debian/initramfs/cryptgnupg-hook \
-		$(CURDIR)/debian/cryptsetup/usr/share/initramfs-tools/hooks/cryptgnupg
+		$(CURDIR)/debian/cryptsetup-initramfs/usr/share/initramfs-tools/hooks/cryptgnupg
 	install -m 0755 debian/initramfs/cryptkeyctl-hook \
-		$(CURDIR)/debian/cryptsetup/usr/share/initramfs-tools/hooks/cryptkeyctl
+		$(CURDIR)/debian/cryptsetup-initramfs/usr/share/initramfs-tools/hooks/cryptkeyctl
 	install -m 0755 debian/initramfs/cryptopenct-hook \
-		$(CURDIR)/debian/cryptsetup/usr/share/initramfs-tools/hooks/cryptopenct
+		$(CURDIR)/debian/cryptsetup-initramfs/usr/share/initramfs-tools/hooks/cryptopenct
 	install -m 0755 debian/initramfs/cryptopensc-hook \
-		$(CURDIR)/debian/cryptsetup/usr/share/initramfs-tools/hooks/cryptopensc
+		$(CURDIR)/debian/cryptsetup-initramfs/usr/share/initramfs-tools/hooks/cryptopensc
 	install -m 0755 debian/initramfs/cryptopensc-script-local-bottom \
-		$(CURDIR)/debian/cryptsetup/usr/share/initramfs-tools/scripts/local-bottom/cryptopensc
+		$(CURDIR)/debian/cryptsetup-initramfs/usr/share/initramfs-tools/scripts/local-bottom/cryptopensc
 	install -m 0755 debian/initramfs/cryptopensc-script-local-top \
-		$(CURDIR)/debian/cryptsetup/usr/share/initramfs-tools/scripts/local-top/cryptopensc
+		$(CURDIR)/debian/cryptsetup-initramfs/usr/share/initramfs-tools/scripts/local-top/cryptopensc
 	install -m 0755 debian/initramfs/cryptpassdev-hook \
-		$(CURDIR)/debian/cryptsetup/usr/share/initramfs-tools/hooks/cryptpassdev
+		$(CURDIR)/debian/cryptsetup-initramfs/usr/share/initramfs-tools/hooks/cryptpassdev
 	install -m 0644 debian/initramfs/cryptroot-initramfs.conf \
-		$(CURDIR)/debian/cryptsetup/usr/share/initramfs-tools/conf-hooks.d/cryptsetup
+		$(CURDIR)/debian/cryptsetup-initramfs/usr/share/initramfs-tools/conf-hooks.d/cryptsetup
 	install -m 0644 debian/initramfs/cryptroot-conf \
-		$(CURDIR)/debian/cryptsetup/etc/cryptsetup-initramfs/conf-hook
+		$(CURDIR)/debian/cryptsetup-initramfs/etc/cryptsetup-initramfs/conf-hook
 	install -m 0755 debian/initramfs/cryptroot-hook \
-		$(CURDIR)/debian/cryptsetup/usr/share/initramfs-tools/hooks/cryptroot
+		$(CURDIR)/debian/cryptsetup-initramfs/usr/share/initramfs-tools/hooks/cryptroot
 	install -m 0755 debian/initramfs/cryptroot-unlock \
-		$(CURDIR)/debian/cryptsetup/usr/share/cryptsetup/initramfs/bin/cryptroot-unlock
+		$(CURDIR)/debian/cryptsetup-initramfs/usr/share/cryptsetup/initramfs/bin/cryptroot-unlock
 	install -m 0755 debian/initramfs/cryptroot-unlock-hook \
-		$(CURDIR)/debian/cryptsetup/usr/share/initramfs-tools/hooks/cryptroot-unlock
+		$(CURDIR)/debian/cryptsetup-initramfs/usr/share/initramfs-tools/hooks/cryptroot-unlock
 	install -m 0755 debian/initramfs/cryptroot-script \
-		$(CURDIR)/debian/cryptsetup/usr/share/initramfs-tools/scripts/local-top/cryptroot
+		$(CURDIR)/debian/cryptsetup-initramfs/usr/share/initramfs-tools/scripts/local-top/cryptroot
 	install -m 0755 debian/initramfs/cryptroot-script-block \
-		$(CURDIR)/debian/cryptsetup/usr/share/initramfs-tools/scripts/local-block/cryptroot
+		$(CURDIR)/debian/cryptsetup-initramfs/usr/share/initramfs-tools/scripts/local-block/cryptroot
 	install -m 0644 debian/cryptdisks.bash_completion \
-		$(CURDIR)/debian/cryptsetup/usr/share/bash-completion/completions/cryptdisks
+		$(CURDIR)/debian/cryptsetup-run/usr/share/bash-completion/completions/cryptdisks
 	install -m 0755 debian/cryptsetup.bug-script \
-		$(CURDIR)/debian/cryptsetup/usr/share/bug/cryptsetup
+		$(CURDIR)/debian/cryptsetup-run/usr/share/bug/cryptsetup
 ifeq ($(shell dpkg-vendor --is Ubuntu && echo yes),yes)
-	mkdir -p $(CURDIR)/debian/cryptsetup/usr/share/apport/package-hooks
+	mkdir -p $(CURDIR)/debian/cryptsetup-run/usr/share/apport/package-hooks
 	install -m 0644 debian/cryptsetup.apport \
-		$(CURDIR)/debian/cryptsetup/usr/share/apport/package-hooks/cryptsetup.py
+		$(CURDIR)/debian/cryptsetup-run/usr/share/apport/package-hooks/cryptsetup.py
 endif
 
 	$(MAKE) -C debian/scripts/po DESTDIR=$(CURDIR)/debian/cryptsetup-bin install
@@ -175,35 +175,35 @@ binary-indep: build install
 binary-arch: build install
 	dh_testdir
 	dh_testroot
-	dh_installdebconf -a
-	dh_installchangelogs -a
-	dh_installdocs -a
-	dh_installexamples -a debian/scripts/gen-ssl-key
-	dh_installinit -a --no-start --name=cryptdisks-early
-	dh_installinit -a --no-start --name=cryptdisks-udev
-	dh_installinit -a --no-start --name=cryptdisks
-	dh_installman -a debian/doc/crypttab.5 debian/doc/cryptdisks_start.8 debian/doc/cryptdisks_stop.8
+	dh_installdebconf
+	dh_installchangelogs
+	dh_installdocs
+	dh_installexamples debian/scripts/gen-ssl-key
+	dh_installinit --no-start --name=cryptdisks-early
+	dh_installinit --no-start --name=cryptdisks-udev
+	dh_installinit --no-start --name=cryptdisks
+	dh_installman debian/doc/crypttab.5 debian/doc/cryptdisks_start.8 debian/doc/cryptdisks_stop.8
 	dh_installman -p cryptsetup-bin debian/luksformat.8
 	# Copy relevant parts to cryptsetup-udeb package
-	cp -a $(CURDIR)/debian/cryptsetup/etc $(CURDIR)/debian/cryptsetup-udeb/
-	cp -a $(CURDIR)/debian/cryptsetup/lib $(CURDIR)/debian/cryptsetup-udeb/
+	cp -a $(CURDIR)/debian/cryptsetup-run/etc $(CURDIR)/debian/cryptsetup-udeb/
+	cp -a $(CURDIR)/debian/cryptsetup-run/lib $(CURDIR)/debian/cryptsetup-udeb/
 	mkdir $(CURDIR)/debian/cryptsetup-udeb/sbin
 	cp -a $(CURDIR)/debian/cryptsetup-bin/sbin/cryptsetup $(CURDIR)/debian/cryptsetup-udeb/sbin/
 	# Copy relevant parts to libcryptsetup12-udeb package
 	cp -a $(CURDIR)/debian/libcryptsetup12/lib $(CURDIR)/debian/libcryptsetup12-udeb/
-	dh_lintian -a
+	dh_lintian
 	dh_strip_nondeterminism
-	dh_compress -a
-	dh_fixperms -a
-	dh_strip -a
+	dh_compress
+	dh_fixperms
+	dh_strip
 	# Check for new/changed symbols in libcryptsetup
 	#dpkg-gensymbols -plibcryptsetup12 -Pdebian/libcryptsetup12 -Odebian/libcrypsetup4.symbols
-	dh_makeshlibs -a -V --add-udeb=libcryptsetup12-udeb
-	dh_shlibdeps -a
-	dh_gencontrol -a
-	dh_installdeb -a
-	dh_md5sums -a
-	dh_builddeb -a
+	dh_makeshlibs -V --add-udeb=libcryptsetup12-udeb
+	dh_shlibdeps
+	dh_gencontrol
+	dh_installdeb
+	dh_md5sums
+	dh_builddeb
 
 binary: binary-indep binary-arch
 
